@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 1702ca549265c7fd2d1f1858ff30dd2c82227531 ChangeLog
+SHA1 a282450ac4ccddc5d9176256ced3e69da8f66a37 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 13370b00f47ba3a62920def404c0fcce851b2ea6 META.yml
-SHA1 81b1cdd43a60ce5aefb6f2ae2ab7be988e057f0e MYMETA.json
-SHA1 b2fd5ae9a15e16780d54414cf7ecda3056bd1feb MYMETA.yml
-SHA1 4843fad8065aeeba98fc7d4599e9d02d0b339ced Makefile.PL
+SHA1 09203830359fe34c9a428d3f1d7845d1a568a23f META.yml
+SHA1 399d0ec1d175c5c17aa681794537e5567f42bd40 MYMETA.json
+SHA1 6c6a39b2e3d6e7f18dc832003eae5a4d4b254c22 MYMETA.yml
+SHA1 2fc0e9ce59db14c99db160779802ff8bca39582f Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 1bbeeea11b2a95c5f6c8901bbe7f687787d1368f install_mozrepl_plugin.ahk
-SHA1 9ef1d3d55792c8a089f046fc0c7eed95693b065d lib/Net/FullAuto.pm
+SHA1 8672d4f80de8cc1186ce7251fd1778199c449cd5 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlEMK8sACgkQJM3IZYB6aOooVgCfa3MiANJibmax+di065Q1WKkv
-UDoAnjdtmcndYSFGXq9y9RJn38wTVV5/
-=tQlR
+iEYEARECAAYFAlEO6KMACgkQJM3IZYB6aOqBZACgp8c0Dzf0RgumnJeS9FJhUkeF
+9LIAoKVmTGn5zscLDRtTkhJ/33LsGMcV
+=qqJQ
 -----END PGP SIGNATURE-----
